--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,11 +2,11 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Ivan Zolin
     - name: Date of Birth
-      value: 14th March 1879
+      value: 6th September 2002
     - name: Languages
-      value: English, German
+      value: English, Russian
 
 - title: Education
   type: time_table
